# mlops-ftda

./: .gitignore  ApiDoc.md  Dockerfile  README.md  app.py  configurator.py  docker-compose.yaml  flask_test.py  logger.py  pyproject.toml  testik.py
.github/workflows/: cd.yaml
api/: endpoints.py
api/src/: dao.py  data_preproccesor.py  trainer.py
configs/: config.yaml  dataset.yaml  flask.yaml  hydra.yaml  linearSVC.yaml  minio.yaml  model.yaml  mongo.yaml
configs/model/: linearSVC.yaml  logreg.yaml
data/: data_preproccesor.py
hw1/: app.py  pyproject.toml
hw1/configs/: config.yaml  dataset.yaml
hw1/configs/model/: linearSVC.yaml
hw1/data/: data_loader.py
models/: trainer.py
src/: data_preproccesor.py  trainer.py
